Improve Swagger example data to better demonstrate CRUD operations
